# porifera

./: .gitignore  README.md  context7.json  pyproject.toml
docs/: design.md  impl.md
scripts/: release.py
src/lemur/: __init__.py  _manager.py  _registry.py
src/lemur/_operations/: __init__.py  _deinstrumenter.py  _instrumenter.py
src/lemur/_strategies/: __init__.py  _base.py  _elevating.py  _standard.py
src/lemur/resources/: lemur_runtime.php
src/porifera/: __init__.py  _exceptions.py  _manager.py  _registry.py
src/porifera/_operations/: _deinstrumenter.py  _instrumenter.py
src/porifera/_strategies/: __init__.py  _base.py  _elevating.py  _standard.py
src/porifera/resources/: porifera_runtime.php
tests/: conftest.py  test_deinstrumenter.py  test_exceptions.py  test_instrumenter.py  test_manager.py  test_registry.py  test_strategies.py
