[project]
name = "porifera"
version = "0.1.1"
description = "PORIFERA: PHP code rewriting instrumentation for expression in AST"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "php-parser-py>=1.2.2",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.11",
  "pylint>=3.2",
  "black>=24.4",
  "isort>=5.13",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short", "--strict-markers"]

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "php_parser_py.*"
ignore_missing_imports = true

[tool.uv]
# uv will recognize this project via pyproject.toml; keep this table for
# project-specific uv settings in future if needed.
